syntax = "proto3";

package pb;
option go_package = "pb";

// top message of the protocol
message HareMessage {
    bytes pubKey = 1;
    bytes innerSig = 2; // sign inner message
    InnerMessage message = 3;
    Certificate cert = 4; // optional
}

// the certificate
message Certificate {
    repeated uint64 values = 1; // the committed set S
    AggregatedMessages aggMsgs = 2;
}

// Aggregated messages
message AggregatedMessages {
    repeated HareMessage messages = 1; // a collection of messages
    bytes aggSig = 2;
}

// basic message
message InnerMessage {
    int32 type = 1;
    uint32 instanceId = 2;
    int32 k = 3; // the round counter
    int32 ki = 4;
    repeated uint64 values = 5; // the set S. optional for commit message in a certificate
    bytes roleProof = 6; // role is implicit by message type, this is the proof
    AggregatedMessages svp = 7; // optional. only for proposal messages
}
